--- a/css/style.css
+++ b/css/style.css
@@ -443,6 +443,7 @@ footer address {
 
   .background {
     background: url("../img/mobile/bgheader.png") no-repeat;
+    background-position: top center;
   }
 
   header .title-header {
@@ -512,7 +513,7 @@ footer address {
   }
   .family article #myDIV .active::before {
     bottom: -1rem;
-    left: 33%;
+    left: 40%;
   }
 
   .reservation h2 {
