--- a/sass/style.scss
+++ b/sass/style.scss
@@ -552,6 +552,9 @@ footer {
 .reservation h2 {
     text-align: center;
 }
+footer {
+    flex-direction: column;
+}
 footer figure {
     margin-bottom: 4rem;
 }
