update error footer

--- a/css/style.css
+++ b/css/style.css
@@ -454,6 +454,10 @@ footer address {
     padding-top: 9.5rem;
   }
 
+  .enjoy {
+    background: none;
+  }
+
   .enjoy picture {
     margin-bottom: 7rem;
   }
