--- a/sass/style.scss
+++ b/sass/style.scss
@@ -473,7 +473,9 @@ footer {
        padding-top: 9.5rem;
    }
 
-
+.enjoy {
+    background: none;
+}
 .enjoy picture {
     margin-bottom: 7rem;
 }
