--- a/css/style.css
+++ b/css/style.css
@@ -56,34 +56,52 @@ html {
   box-sizing: inherit;
 }
 
+:root {
+  --color-beaver: rgba(158, 127, 102, 1);
+  --color-codGray: rgba(17, 17, 17, 1);
+  --mirage: rgba(23, 25 ,43, 1);
+  --ebonyCLay: rgba(36, 43, 55, 1);
+  --shuttleGray: rgba(92, 103, 121);
+}
+
 body {
-  max-width: 1400px;
   font-family: "Spartan", sans-serif;
 }
 
-P {
-  letter-spacing: -0.22px;
-  line-height: 3rem;
+.max-width {
+  max-width: 1114px;
+  margin: 0 auto;
 }
 
-p, a {
+p {
   font-size: 1.8rem;
+  font-weight: 400;
+  line-height: 3rem;
+  letter-spacing: -0.225px;
+}
+
+.para-footer {
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 2.8rem;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-style: normal;
 }
 
 h1 {
   font-size: 6.4rem;
-  color: white;
-  padding-bottom: 2.4rem;
   font-weight: 300;
+  line-height: 7.2rem;
   letter-spacing: -0.8px;
+  color: white;
 }
 
 h2 {
   font-size: 4rem;
   font-weight: 700;
-  line-height: 5.2rem;
+  line-height: 5.6rem;
   letter-spacing: -0.5px;
-  padding-bottom: 1.6rem;
 }
 
 h3 {
@@ -93,440 +111,321 @@ h3 {
   letter-spacing: -0.225px;
 }
 
-a {
-  text-decoration: none;
+.h3-title {
+  font-size: 1.8rem;
+  font-weight: 700;
+  line-height: 2.8rem;
+  letter-spacing: -0.225px;
+  margin-bottom: 0.4rem;
+}
+
+.highlights-seared-para {
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: -0.1875px;
 }
 
 .btn {
   font-size: 1.4rem;
   font-weight: 600;
-  line-height: 2.8rem;
+  line-height: 16px;
   letter-spacing: 2px;
-  margin-bottom: 1.2rem;
-  display: block;
-  position: relative;
-  color: lightgrey;
+  padding: 2.4rem 5.7rem;
+  text-decoration: none;
+  border: 1px solid white;
+  color: white;
+  transition: all 0.5s;
 }
 .btn:hover {
-  color: #4c4c4c;
+  background: white;
+  color: black;
+  border: 1px black solid;
 }
 
-/* Style the active class, and buttons on mouse-over */
-.active {
-  color: #4c4c4c;
-  /* background: url('tiret-h3.png') no-repeat; */
+.btn-black {
+  display: inline-block;
+  background-color: var(--color-codGray);
+  margin-top: 3.2rem;
 }
 
-.active::before {
-  content: url("../img/main-page/tiret-h3.png");
-  position: absolute;
-  left: -23.8rem;
-}
-
-.none {
-  display: none;
-}
-
-.bg-black {
-  background-color: #111111;
-  margin-top: -7rem;
-}
-
-.bg-family {
-  background: url("../img/main-page/Rectangle.svg") no-repeat;
-  background-position-x: -45rem;
+.container-article {
+  max-width: 44.2rem;
   position: relative;
 }
-.bg-family::before {
-  content: url("../img/main-page/barre.png");
+.container-article::before {
+  content: url("../img/main-page/branch-h2.svg");
   position: absolute;
-  top: 11rem;
-  left: 3rem;
+  top: -4.8rem;
+}
+.container-article .heading-2 {
+  margin-bottom: 1.6rem;
 }
 
-.flex {
+.flexbox {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.max-container {
-  max-width: 1235px;
-  margin: 0 auto;
+.flexbox-column {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
-.button {
-  text-decoration: none;
-  color: white;
-  border: 1px solid;
-  padding: 2rem 5rem;
-  transition: all 0.5s;
-  font-size: 500;
-  background: #111111;
-}
-.button:hover {
-  background: white;
-  color: #111111;
+.display-none {
+  display: none;
 }
 
 .background {
   background: url("../img/main-page/bg-header.png") no-repeat;
   background-position: top right;
-  padding-bottom: 18.9rem;
-}
-
-.little-article {
-  width: 35.1%;
-  position: relative;
-}
-.little-article::before {
-  content: url("../img/main-page/branch-h2.svg");
-  position: absolute;
-  top: -10rem;
-}
-
-header {
-  background-color: #111111;
-}
-header figure {
+  background-size: contain;
+  background-color: #1a1a1a;
   padding-top: 6.5rem;
-  padding-bottom: 15.3rem;
+  padding-left: 16.5rem;
 }
-header .title-header {
-  width: 52%;
-  padding-bottom: 8.2rem;
+.background__container {
+  max-width: 54.5rem;
+  padding-bottom: 19.8rem;
 }
-header .title-header p {
-  width: 70%;
+.background__container .background__heading-1 {
+  padding-top: 15.3rem;
+}
+.background__container .background__para {
+  padding-top: 2.4rem;
   color: white;
+  max-width: 445px;
+}
+.background__container .btn--background {
+  display: inline-block;
+  margin-top: 4.2rem;
 }
 
-.enjoy {
-  justify-content: space-between;
-  align-items: center;
-  background: url("../img/main-page/Rectangle.svg") no-repeat;
-  background-position: -14% 77%;
-  margin-bottom: 12rem;
-}
-.enjoy picture {
-  margin-top: -10rem;
-}
-.enjoy picture img {
-  box-shadow: 0px 75px 100px -50px rgba(56, 66, 85, 0.5);
-}
-
-.most {
+.twobox {
   position: relative;
-  justify-content: space-between;
-  align-items: center;
-  background: url("../img/main-page/Rectangle1.svg") no-repeat;
-  background-position: right bottom;
+  background-image: url("../img/main-page/Rectangle.svg"), url("../img/main-page/Rectangle1.svg");
+  background-repeat: no-repeat;
+  background-position-y: 24.2rem, 91.1%;
+  background-position-x: left, right;
 }
-.most::before {
-  content: url("../img/main-page/barre.png");
-  position: absolute;
-  right: 0;
+.twobox__container-enjoy {
+  margin-bottom: 12.1rem;
 }
-.most picture {
-  margin-top: 0rem;
-}
-.most picture img {
-  box-shadow: 0px 75px 100px -50px rgba(56, 66, 85, 0.5);
+.twobox__container-enjoy__picture img {
+  margin-top: -7rem;
 }
 
-.highlights {
-  padding-top: 20rem;
-  color: white;
-  justify-content: space-between;
-  align-items: flex-start;
+.twobox__container-most__picture {
+  position: relative;
 }
-.highlights .threearticle {
-  width: 50%;
-}
-.highlights .threearticle .seared {
-  justify-content: space-between;
-  margin-bottom: 2.4rem;
-  padding-bottom: 2.4rem;
-}
-.highlights .threearticle .seared div {
-  width: 68%;
-}
-.highlights .threearticle .seared picture {
-  background: url("../img/main-page/one-barre.png") no-repeat;
-  background-position: 100% 12%;
-  width: 26%;
+.twobox__container-most__picture::before {
+  position: absolute;
+  top: 28.2rem;
+  right: -10rem;
 }
 
 .border {
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 
-.family {
-  justify-content: space-between;
-  padding: 16rem 0;
+.highlights {
+  background-color: var(--color-codGray);
+  margin-top: -10.4rem;
+  color: white;
 }
-.family picture img {
-  box-shadow: 0px 75px 100px -50px rgba(56, 66, 85, 0.5);
+.highlights__container {
+  padding-top: 20rem;
+  align-items: baseline;
 }
-.family article {
-  width: 37%;
+.highlights__seared {
+  margin-bottom: 12rem;
 }
-.family article div {
-  margin-bottom: 10rem;
+.highlights__seared__items {
+  max-width: 54rem;
+  padding: 2.4rem 0;
 }
-.family article div p {
-  margin-bottom: 5.2rem;
+.highlights__seared__items__picture {
+  background: url("../img/main-page/one-barre.png") no-repeat;
+  background-position: right 1.8rem;
+  width: 15rem;
+  margin-right: 2.2rem;
+}
+.highlights__seared__items__description {
+  max-width: 35rem;
 }
 
-.bg-reservation {
-  background: url("../img/main-page/reservation.png") no-repeat;
-  background-color: #111111;
+.family {
+  background: url("../img/main-page/Rectangle.svg") no-repeat;
+  background-position: top left;
+}
+.family__container {
+  padding: 16rem 0;
+}
+.family__container picture {
+  position: relative;
+}
+.family__container picture::before {
+  position: absolute;
+  top: -3.8rem;
+  left: -3rem;
+}
+.family .buttons {
+  margin-top: 7.8rem;
+}
+.family .buttons a {
+  display: block;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 28px;
+  letter-spacing: 2px;
+  text-decoration: none;
+  color: rgba(1, 1, 1, 0.3);
+  margin-bottom: 1.2rem;
+  transition: all 0.5s;
+}
+.family .buttons a:hover {
+  color: var(--color-codGray);
+}
+.family .buttons .active {
+  position: relative;
+  color: var(--color-codGray);
+}
+.family .buttons .active::before {
+  content: url("../img/main-page/longbarre.png");
+  position: absolute;
+  top: -0.5rem;
+  left: -12.7rem;
 }
 
 .reservation {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   color: white;
+  background: url("../img/main-page/reservation.png") no-repeat;
+  background-size: contain;
+  background-color: var(--color-codGray);
 }
-.reservation h2 {
-  padding: 9.2rem 0;
-}
-.reservation a {
-  background: transparent;
+.reservation__container {
+  text-align: center;
+  padding: 7.9rem 0;
 }
 
-.bg-footer {
-  background: #111111;
-}
-
-footer {
+.footer {
+  background: var(--color-codGray);
   color: white;
+}
+.footer__container {
   padding: 7.8rem 0;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
-footer article {
-  width: 75%;
-  justify-content: space-around;
+.footer__container__picture {
+  display: inline-block;
 }
-footer address {
-  font-style: normal;
-  font-size: 1.4rem;
-  font-weight: 400;
-  line-height: 2.8rem;
-  text-transform: uppercase;
-  letter-spacing: 2px;
+.footer__address {
+  width: 814px;
+  justify-content: space-evenly;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1150px) {
+  .container-article {
+    margin: 9.5rem auto 0;
+    text-align: center;
+  }
+
   .background {
     background: url("../img/tablet/bg-header.png") no-repeat;
     background-position: top center;
-    text-align: center;
+    padding-left: 0;
+    background-color: #181818;
   }
-
-  header .title-header {
-    width: 71%;
+  .background__container {
+    max-width: 67.9rem;
+    margin: 0 auto;
     text-align: center;
-    padding-top: 42%;
+    padding-top: 31rem;
+  }
+  .background .background__heading-1 {
+    padding-top: 3.2rem;
+  }
+  .background .background__para {
+    max-width: 57.3rem;
     margin: 0 auto;
   }
-  header .title-header figure {
-    padding-bottom: 3.2rem;
-  }
-  header .title-header p {
-    width: 100%;
-  }
 
-  .enjoy {
-    background: url("../img/tablet/Rectangle.png") no-repeat;
-    background-position: center left;
-    flex-direction: column;
+  .twobox {
+    background-position-y: 12.8rem, 100%;
+    background-position-x: -55rem, 37rem;
+    padding-bottom: 12rem;
   }
-  .enjoy picture {
-    margin-bottom: 15rem;
+  .twobox__container-enjoy {
+    justify-content: center;
   }
-
-  .most {
+  .twobox__container-most {
     flex-direction: column-reverse;
-    margin-bottom: 12rem;
-    background: url("../img/tablet/Rectangle2.png") no-repeat;
-    background-position: bottom right;
-  }
-  .most::before {
-    top: 22rem;
-  }
-  .most picture {
-    margin-bottom: 15rem;
-  }
-
-  .little-article {
-    width: 59%;
-    margin: 0 auto;
-  }
-  .little-article::before {
-    left: 40%;
-  }
-  .little-article h2 {
-    width: 84%;
-    margin: 0 auto;
-  }
-
-  .bg-black {
-    margin: 0;
-    text-align: center;
-  }
-
-  .highlights .threearticle {
-    margin: 2.6rem auto;
-    width: 88%;
-  }
-
-  .bg-family {
-    text-align: center;
-  }
-
-  .family {
-    flex-direction: column;
-  }
-  .family article {
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column-reverse;
-    width: 85%;
-  }
-  .family article div:nth-child(1) {
-    width: 70%;
-    margin: 0 auto;
-  }
-  .family article #myDIV {
-    margin-top: 5.6rem;
-    display: flex;
-    justify-content: space-between;
-  }
-  .family article #myDIV .active::before {
-    bottom: -1.8rem;
-    left: 21%;
-  }
-
-  .bg-reservation {
-    background: url("../img/tablet/reservation.png") no-repeat;
-    background-color: #111111;
-    padding-bottom: 5rem;
-  }
-
-  .reservation {
-    flex-direction: column;
-  }
-  .reservation h2 {
-    padding-bottom: 1.5rem;
-    padding-top: 5rem;
-  }
-
-  footer article {
-    flex-direction: column;
-    justify-content: start;
-    width: 60%;
-  }
-  footer article div:nth-child(1) {
-    margin-bottom: 3.2rem;
-  }
-}
-@media screen and (max-width: 650px) {
-  h1, h2 {
-    font-size: 3.2rem;
-  }
-
-  p {
-    font-size: 1.5rem;
-  }
-
-  .background {
-    background: url("../img/mobile/bgheader.png") no-repeat;
-  }
-
-  header .title-header {
-    width: 88%;
-  }
-
-  header figure {
-    padding-top: 9.5rem;
-  }
-
-  .enjoy picture {
-    margin-bottom: 7rem;
-  }
-
-  .little-article {
-    width: 100%;
-    text-align: center;
-  }
-  .little-article::before {
-    top: -4rem;
-  }
-  .little-article p {
-    width: 92%;
-    margin: 0 auto;
-  }
-
-  .most {
-    background: none;
-  }
-  .most picture {
-    margin-bottom: 10rem;
-  }
-  .most::before {
-    display: none;
   }
 
   .highlights {
-    padding-top: 10rem;
+    margin-top: 0rem;
+    padding-top: 4rem;
   }
-  .highlights .threearticle div {
-    flex-direction: column;
+  .highlights__container {
+    justify-content: center;
+    padding: 0;
   }
-  .highlights .threearticle .seared picture {
-    background: none;
-    width: 100%;
-  }
-  .highlights .threearticle .seared div {
-    width: 95%;
-    margin: 2rem auto;
+  .highlights__seared {
+    padding-top: 2.6rem;
   }
 
-  .bg-family::before {
+  .family__container {
+    justify-content: center;
+    padding-top: 9.6rem;
+  }
+  .family__gathering {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .family__gathering .container-article::before {
     content: none;
   }
-
-  .family {
-    padding: 7rem 0;
+  .family .buttons {
+    margin-top: 5.6rem;
   }
-  .family article {
-    width: 100%;
-  }
-  .family article div:nth-child(1) {
-    width: 99%;
-  }
-  .family article #myDIV {
-    flex-direction: column;
-  }
-  .family article #myDIV .active::before {
-    bottom: -1rem;
-    left: 33%;
-  }
-
-  .reservation h2 {
+  .family .buttons a {
+    display: inline-block;
+    margin: 0 2rem 0 0;
     text-align: center;
   }
-
-  footer figure {
-    margin-bottom: 4rem;
+  .family .buttons .active::before {
+    top: 1rem;
+    left: 19%;
   }
 
-  footer, footer article {
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+  .reservation {
+    background: url("../img/tablet/reservation.png");
+    background-color: var(--color-codGray);
+  }
+  .reservation__container {
+    justify-content: center;
+    padding: 6.5rem 0rem;
+  }
+  .reservation__container .btn {
+    margin-top: 2.3rem;
+  }
+
+  .footer__container {
+    align-items: flex-end;
+  }
+  .footer__address {
+    display: block;
+    max-width: 45.6rem;
+    margin-left: 12.9rem;
+  }
+  .footer__address__container {
+    margin-bottom: 3.2rem;
   }
 }
 
